# IniParser

./: .gitignore  CMakeLists.txt  main.cpp
headers/: FileIOException.h  IniParser.h  IniParserException.h  ParseException.h
src/: FileIOException.cpp  IniParser.cpp  IniParserException.cpp  ParseException.cpp
